--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-beautifulsoup4==4.4.0
 blinker==1.4
 Flask==0.10.1
 Flask-DebugToolbar==0.10.0
 itsdangerous==0.24
 Jinja2==2.8
+lxml==3.4.4
 MarkupSafe==0.23
 requests==2.7.0
 Werkzeug==0.10.4
